# bq-agentic-reasoner

./: .gitignore  README.md  pyproject.toml  requirements.txt
gcp/audit_log_handler/: README.md  main.py  parser.py  requirements.txt
src/bq_agentic_reasoner/: __init__.py
src/bq_agentic_reasoner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bq_agentic_reasoner/agents/: __init__.py  base.py  bqml_optimization_agent.py  correlation_agent.py  cost_estimator_agent.py  meta_agent.py  query_optimization_agent.py  risk_agent.py  sql_reasoner_agent.py
src/bq_agentic_reasoner/backend/: __init__.py  event_processor.py  orchestrator.py  pipeline_enrichment.py  pipeline_realtime.py  scheduler.py
src/bq_agentic_reasoner/bigquery/: __init__.py  bqml_client.py  metadata_client.py  sandbox_guard.py
src/bq_agentic_reasoner/config/: __init__.py  firestore.yaml  hf_models.yaml  learning_weights.yaml  loader.py  pipeline.yaml  security.yaml  thresholds.yaml
src/bq_agentic_reasoner/db/: __init__.py  firestore_client.py  migrations.py  schemas.py
src/bq_agentic_reasoner/history/: __init__.py  aggregations.py  store.py  trends.py
src/bq_agentic_reasoner/learning/: __init__.py  feedback_store.py  signals.py  weight_updater.py
src/bq_agentic_reasoner/llm/: __init__.py  cache.py  explainer.py  hf_client.py  prompt_builder.py  sql_validator.py
ui/: streamlit_app.py
ui/components/: export.py  feedback.py  filters.py  header.py  history_view.py  live_feed.py  rewrite_view.py
ui/services/: firestore_reader.py  session_manager.py
(+28 files in other folders)
