[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bq-agentic-reasoner"
version = "0.1.0"
description = "Agentic BigQuery query reasoning, optimization, and monitoring system"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Santanu Mitra" }
]
requires-python = ">=3.10"

dependencies = [
  "google-cloud-firestore>=2.11.0",
  "google-cloud-bigquery>=3.17.0",
  "pydantic>=2.5.0",
  "PyYAML>=6.0",
  "requests>=2.31.0",
  "hugginface-hub==1.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "streamlit",
  "pandas",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bq_agentic_reasoner.config" = ["*.yaml"]

